# AgentVillage

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Ideas-from-claude.md  Ideas_from_chatGPT.md  README.md  jinro_app_next.md  main.py  pyproject.toml  requirements.txt
config/: agents.json  roles.json  tokens.json
doc/: Architecture.md  DetailDesign.md  Ideas.md  Spec.md  Task.md  TechnicalDebt.md  WorkingWithAIInLegacyProject.md  project-discipline.md
src/: config.py
src/action/: resolver.py  types.py  validator.py
src/agent/: memory.py  state.py  store.py
src/domain/: actor.py  agent.py  event.py  schema.py
src/domain/roles/: __init__.py  knight.py  madman.py  medium.py  role.py  seer.py  villager.py  werewolf.py
src/engine/: game.py  phase.py  phase_day.py  phase_night.py  phase_pre_night.py  role.py  setup.py  victory.py  vote.py
src/legacy/: actor_normalizer.py  role_normalizer.py
src/llm/: client.py  factory.py  prompt.py  schema.py
src/logger/: event.py  logger.py  reader.py  writer.py
src/ui/: cli.py  renderer.py  replay.py
tests/: TestStrategy.md  conftest.py
tests/contract/: test_engine_orchestration_contract.py  test_engine_renderer_contract.py
tests/unit/: conftest.py  test_client.py  test_extract_json.py  test_factory.py  test_game_day_loop.py  test_judgment_prompt.py  test_judgment_schema.py  test_logger_reader.py  test_logger_writer.py  test_main.py  test_memory.py  test_phase_night.py  test_pre_night.py  test_prompt.py  test_role.py  test_setup.py  test_store.py
tests/unit/legacy/: test_actor_normalizer.py  (+1 more)
(+2 files in other folders)
