[project]
name = "agentvillage"
version = "0.1.0"
description = "LLM multi-agent werewolf social simulation game"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "pydantic>=2.0.0",
    "readchar>=4.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
markers = [
    "unit: unit tests (no I/O, no network)",
    "integration: integration tests (real I/O or multi-module)",
    "e2e: end-to-end tests covering full game flow (may call real LLM API; skipped in CI by default)",
]
